--- a/docs/patterns/molecules-card/molecules-card.mustache
+++ b/docs/patterns/molecules-card/molecules-card.mustache
@@ -1,7 +1,7 @@
 <div class="m-card">
     {{> atoms-image(imageURL:"../../images/card/card.png") }}
     <div class="m-card__text">
-        {{> atoms-heading-3 }}
+        {{> atoms-heading-3:m-card__heading }}
         {{> atoms-text }}
     </div>
 
