--- a/source/_patterns/atoms/image.mustache
+++ b/source/_patterns/atoms/image.mustache
@@ -1,4 +1,4 @@
-<div class="a-image">
+<div class="a-image {{ styleModifier }}">
     <img src="{{ imageURL }}" alt="{{ imageAlt }}" />
 </div>
    
