--- a/source/_patterns/molecules/card-small.mustache
+++ b/source/_patterns/molecules/card-small.mustache
@@ -1,6 +1,6 @@
 <div class="m-card">
     {{> atoms-image(imageURL:"../../images/card/card-small.png") }}
     <div class="m-card__text">
-        {{> atoms-heading-3 }}
+        {{> atoms-heading-3:m-card__heading }}
     </div>
 </div>
