--- a/source/scss/modules/_molecules.scss
+++ b/source/scss/modules/_molecules.scss
@@ -110,7 +110,23 @@
         }
     }
 
+    .m-card__heading {
+        color: $color-primary;
+    }
+
     .m-card__link {
         margin: auto 15px 20px;
     }
+}
+
+.m-team-member {
+    text-align: center;
+    padding: 20px;
+}
+
+.m-team-member__image img {
+    border: 4px solid $color-primary;
+    border-radius: 50%;
+    width: 150px;
+    margin: 10px auto;
 }
