--- a/source/scss/modules/_organisms.scss
+++ b/source/scss/modules/_organisms.scss
@@ -64,3 +64,11 @@
     display: inline-block;
     padding: 10px 15px 0 0;
 }
+
+.o-footer__input {
+    width: 80%;
+}
+
+.o-footer__input:focus {
+    outline: 3px solid $color-primary;
+}
