--- a/docs/patterns/organisms-header/organisms-header.mustache
+++ b/docs/patterns/organisms-header/organisms-header.mustache
@@ -1,7 +1,7 @@
 <header class="o-header" role="banner">
     <div class="o-header__content">
         {{> molecules-logo-link }}
+        <button class="m-navigation__menu-button">Menu</button>
         {{> molecules-header-navigation }}
-        {{> molecules-button(buttonText:"Donate now") }}
     </div>
 </header>
