--- a/source/_patterns/molecules/header-navigation.mustache
+++ b/source/_patterns/molecules/header-navigation.mustache
@@ -5,5 +5,8 @@
         <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"About us") }}</li>
         <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"News") }}</li>
         <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"Get invloved") }}</li>
+        <li class="m-navigation__list-item">
+            {{> molecules-button(buttonText:"Donate now") }}
+        </li>
     </ul>
 </nav>
