--- a/source/scss/modules/_organisms.scss
+++ b/source/scss/modules/_organisms.scss
@@ -1,15 +1,22 @@
 // Header
 .o-header {
     border-bottom: 1px solid #F2F2F2;
-    padding: 1em 0;
+    padding: 0;
 }
 .o-header__content {
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     max-width: 1440px;
     margin: 0 auto;
     padding: 20px;
+}
+
+@media screen and (min-width:800px) {
+    .o-header {
+        padding: 1em 0;
+    }
 }
 
 // Cards
@@ -57,12 +64,20 @@
 
 .o-footer__col {
     padding: 30px 20px 60px;
-    width: 33.333333%;
+    width: 100%
 }
 
 .o-footer__icon {
     display: inline-block;
     padding: 10px 15px 0 0;
+
+    a {
+        color: #ffffff;
+    }
+
+    a:hover {
+        color: $color-primary;
+    }
 }
 
 .o-footer__input {
@@ -71,4 +86,10 @@
 
 .o-footer__input:focus {
     outline: 3px solid $color-primary;
+}
+
+@media screen and (min-width: 768px) {
+    .o-footer__col {
+        width:  33.333333%;
+    }
 }
