--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -148,12 +148,16 @@ ul, ol {
   border-bottom: 4px solid #DA3832; }
 
 .m-logo-link {
-  max-width: 280px;
+  max-width: 250px;
   padding-right: 10px; }
   .m-logo-link:focus {
     outline-offset: 6px; }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 400px) {
+  .m-logo-link {
+    max-width: 280px; } }
+
+@media screen and (min-width: 500px) {
   .m-logo-link {
     max-width: 300px; } }
 
@@ -173,7 +177,7 @@ ul, ol {
   border-top: 3px solid #da3832;
   background: none;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin-left: auto;
   margin-right: 10px;
   margin-top: 10px;
@@ -218,6 +222,10 @@ ul, ol {
     justify-content: center; }
   .m-navigation--footer .m-navigation__list-item a {
     color: #ffffff; }
+
+@media screen and (min-width: 500px) {
+  .m-navigation__menu-button {
+    font-size: 1rem; } }
 
 @media screen and (min-width: 800px) {
   .m-navigation__list-item {
@@ -320,7 +328,11 @@ ul, ol {
   flex-direction: row;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 20px; }
+  padding: 10px; }
+
+@media screen and (min-width: 500px) {
+  .o-header__content {
+    padding: 20px; } }
 
 @media screen and (min-width: 800px) {
   .o-header {
@@ -336,7 +348,7 @@ ul, ol {
   flex-wrap: wrap;
   margin: 0 auto;
   max-width: 940px;
-  padding: 20px; }
+  padding: 20px 0; }
 
 .o-donate__text {
   flex: 999 1 auto;
@@ -363,7 +375,7 @@ ul, ol {
   margin: 0 auto; }
 
 .o-footer__col {
-  padding: 30px 20px 60px;
+  padding: 15px 10px 30px;
   width: 100%; }
 
 .o-footer__icon {
@@ -380,14 +392,23 @@ ul, ol {
 .o-footer__input:focus {
   outline: 3px solid #da3832; }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 500px) {
+  .o-footer__col {
+    padding: 30px 20px 60px;
+    width: 50%; } }
+
+@media screen and (min-width: 800px) {
   .o-footer__col {
     width: 33.333333%; } }
 
 .t-full-width {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 20px; }
+  padding: 10px; }
+
+@media screen and (min-width: 500px) {
+  .t-full-width {
+    padding: 20px; } }
 
 .t-left-content {
   max-width: 840px; }
