--- a/source/scss/modules/_molecules.scss
+++ b/source/scss/modules/_molecules.scss
@@ -1,13 +1,19 @@
 // Logo link
 .m-logo-link {
-    max-width: 280px;
+    max-width: 250px;
     padding-right: 10px;
     &:focus {
         outline-offset: 6px;
     }
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width:400px) {
+    .m-logo-link {
+        max-width: 280px;
+    }
+}
+
+@media screen and (min-width:500px) {
     .m-logo-link {
         max-width: 300px;
     }
@@ -32,7 +38,7 @@
     border-top: 3px solid $color-primary;
     background: none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 0.8rem;
     margin-left: auto;
     margin-right: 10px;
     margin-top: 10px;
@@ -89,6 +95,12 @@
 
     .m-navigation__list-item a {
         color: #ffffff;
+    }
+}
+
+@media screen and (min-width:500px) {
+    .m-navigation__menu-button {
+        font-size: 1rem;
     }
 }
 
