--- a/docs/patterns/atoms-button/atoms-button.mustache
+++ b/docs/patterns/atoms-button/atoms-button.mustache
@@ -1,4 +1,4 @@
-<button class="m-button {{ styleModifier }}">
+<button class="a-button {{ styleModifier }}">
     {{> atoms-icon }}
     {{ buttonText }}
 </button>
