--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,11 +6,32 @@
 @import "base/reset",
         "base/general";
 
-// MODULES
-@import "modules/atoms",
-        "modules/molecules",
-        "modules/organisms",
-        "modules/templates";
+// ATOMS
+@import "modules/atoms/buttons",
+        "modules/atoms/icons",
+        "modules/atoms/images",
+        "modules/atoms/links",
+        "modules/atoms/logo";
+
+// MOLECULES
+@import "modules/molecules/card",
+        "modules/molecules/footer-navigation",
+        "modules/molecules/global-navigation",
+        "modules/molecules/logo-link",
+        "modules/molecules/team-member";
+
+// ORGANISMS
+@import "modules/organisms/blog-hero",
+        "modules/organisms/cards",
+        "modules/organisms/donate",
+        "modules/organisms/footer",
+        "modules/organisms/header";
+
+// TEMPLATES
+@import "modules/templates/blog-article",
+        "modules/templates/content",
+        "modules/templates/full-width",
+        "modules/templates/grid";
 
 // UTILITIES
 @import "utilities/helpers",
