--- a/source/_patterns/molecules/header-navigation.mustache
+++ b/source/_patterns/molecules/header-navigation.mustache
@@ -1,12 +1,12 @@
-<nav class="m-navigation {{ styleModifier }}">
-    <ul class="m-navigation__list">
-        <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"Who we help") }}</li>
-        <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"How we help") }}</li>
-        <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"About us") }}</li>
-        <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"News") }}</li>
-        <li class="m-navigation__list-item">{{> atoms-menu-link(menuText:"Get invloved") }}</li>
-        <li class="m-navigation__list-item">
-            {{> molecules-button(buttonText:"Donate now") }}
+<nav class="m-global-navigation {{ styleModifier }}">
+    <ul class="m-global-navigation__list">
+        <li class="m-global-navigation__list-item">{{> atoms-menu-link(menuText:"Who we help") }}</li>
+        <li class="m-global-navigation__list-item">{{> atoms-menu-link(menuText:"How we help") }}</li>
+        <li class="m-global-navigation__list-item">{{> atoms-menu-link(menuText:"About us") }}</li>
+        <li class="m-global-navigation__list-item">{{> atoms-menu-link(menuText:"News") }}</li>
+        <li class="m-global-navigation__list-item">{{> atoms-menu-link(menuText:"Get invloved") }}</li>
+        <li class="m-global-navigation__list-item">
+            {{> atoms-button(buttonText:"Donate now") }}
         </li>
     </ul>
 </nav>
