--- a/source/_patterns/organisms/donate.mustache
+++ b/source/_patterns/organisms/donate.mustache
@@ -3,6 +3,6 @@
         {{> atoms-text:u-subtitle(text:"Subtitle style Open Sans Regular 25px #575757 Make a donation today and your money will go directly adversity.") }}
     </div>
     <div class="o-donate__button">
-        {{> molecules-button:m-button--lg(buttonText:"Donate now") }}
+        {{> atoms-button:a-button--lg(buttonText:"Donate now") }}
     </div>
 </div>
