--- a/source/scss/modules/templates/_grid.scss
+++ b/source/scss/modules/templates/_grid.scss
@@ -1,23 +1,4 @@
-.t-full-width {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-@media screen and (min-width:500px) {
-    .t-full-width {
-        padding: 20px;
-    }
-}
-
-.t-left-content {
-    max-width: 840px;
-}
-
-.t-right-content {
-    max-width: 600px;
-}
-
+// Grid
 .t-3-col-flex {
     display: flex;
 }
