--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -18,6 +18,7 @@
         "modules/molecules/footer-navigation",
         "modules/molecules/global-navigation",
         "modules/molecules/logo-link",
+        "modules/molecules/skip-links",
         "modules/molecules/team-member";
 
 // ORGANISMS
