--- a/source/css/style.css
+++ b/source/css/style.css
@@ -307,6 +307,37 @@ ul, ol {
   .m-logo-link {
     max-width: none; } }
 
+.m-skip-links {
+  left: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  z-index: 999; }
+
+.m-skip-links__link {
+  background: #ffffff;
+  color: #575757;
+  height: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  text-decoration: underline;
+  top: 0;
+  width: 0; }
+
+.m-skip-links__link:focus {
+  border: 3px dashed #da3832;
+  height: auto;
+  left: 10px;
+  overflow: auto;
+  padding: 10px;
+  top: 10px;
+  width: auto; }
+
+.keypress .m-skip-links__link:focus {
+  outline: none; }
+
 .m-team-member {
   text-align: center;
   padding: 20px; }
