--- a/source/scss/abstracts/_variables.scss
+++ b/source/scss/abstracts/_variables.scss
@@ -1,4 +1,4 @@
 // BRAND
 $color-primary: #da3832 !default; // Red
 $color-secondary: #575757 !default; // Dark grey
-$color-tertiary: #ffffff !default; // Dark grey
+$color-tertiary: #ffffff !default; // White
