Tweaked sub menus and card styles

--- a/source/scss/modules/molecules/_card.scss
+++ b/source/scss/modules/molecules/_card.scss
@@ -7,6 +7,7 @@
     flex-basis: calc((60rem - 100%) * 999);
     flex-direction: column;
     margin: 25px;
+    min-width: 25%;
     overflow: hidden;
 
     .m-card__text {
