--- a/source/scss/modules/molecules/_global-navigation.scss
+++ b/source/scss/modules/molecules/_global-navigation.scss
@@ -62,6 +62,35 @@
     width: 100%;
 }
 
+.m-global-navigation__sub-menu {
+    display: none;
+    padding: 20px 20px 0;
+    z-index: 1;
+
+    .m-global-navigation__list-item {
+        padding-bottom: 12px;
+        position: relative;
+        background: #ffffff;
+        display: block;
+
+        &:last-child {
+            border-radius: 0 0 12px 12px;
+            padding-bottom: 20px;
+        }
+    }
+}
+  
+.m-global-navigation__list-item--active {
+
+    > a {
+        border-bottom: 4px solid #DA3832;
+    }
+
+    .m-global-navigation__sub-menu {
+        display: block;
+    }
+}
+
 @media screen and (min-width:500px) {
     .m-global-navigation__menu-button {
         font-size: 1rem;
@@ -98,35 +127,5 @@
 
     .m-global-navigation__list-item {
         width: auto;
-    }
-}
-
-.m-global-navigation__sub-menu {
-    display: none;
-    padding: 20px 0;
-    position: absolute;
-    z-index: 1;
-
-    .m-global-navigation__list-item {
-        padding-bottom: 12px;
-        position: relative;
-        background: #ffffff;
-        display: block;
-
-        &:last-child {
-            border-radius: 0 0 12px 12px;
-            padding-bottom: 20px;
-        }
-    }
-}
-  
-.m-global-navigation__list-item--active {
-
-    > a {
-        border-bottom: 4px solid #DA3832;
-    }
-
-    .m-global-navigation__sub-menu {
-        display: block;
     }
 }
