--- a/source/scss/base/_general.scss
+++ b/source/scss/base/_general.scss
@@ -46,6 +46,14 @@ h2 {
 h3 {
   font-family: 'OpenSans-Bold', sans-serif;
   font-size: 1.875rem;
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
