--- a/source/scss/utilities/_helpers.scss
+++ b/source/scss/utilities/_helpers.scss
@@ -56,6 +56,18 @@
     padding-bottom: 20px;
 }
 
+// Visibility
+.u-visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+
 // Underline
 .u-underline {
     padding: 0 0 25px;
