--- a/source/scss/modules/components/_cards.scss
+++ b/source/scss/modules/components/_cards.scss
@@ -11,8 +11,8 @@
     display: flex;
     flex-direction: column;
     margin: 25px;
-    width: 100%;
     overflow: hidden;
+    width: 100%;
 
     .c-card__text {
         padding: 18px 20px;
@@ -28,6 +28,14 @@
 
     .c-card__link {
         margin: auto 15px 20px;
+    }
+}
+
+a.c-card {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
     }
 }
 
