--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -20,6 +20,7 @@
         "modules/components/quote",
         "modules/components/logo-link",
         "modules/components/skip-links",
+        "modules/components/latest-articles",
         "modules/components/team-members",
         "modules/components/hero-blog",
         "modules/components/donate",
