--- a/source/scss/modules/components/_cards.scss
+++ b/source/scss/modules/components/_cards.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-flow: row wrap;
     margin: 0 -25px;
+    padding: 30px 0;
 }
 
 .c-card {
@@ -24,10 +25,24 @@
 
     .c-card__heading {
         color: $color-primary;
+        font-size: 1.875rem;
     }
 
     .c-card__link {
         margin: auto 15px 20px;
+    }
+
+    .c-card__meta {
+        align-items: center;
+        display: flex;
+        font-size: 0.95rem;
+        margin: 0 40px 10px 0;
+
+        svg {
+            height: 1em;
+            margin-right: 5px;
+            width: 1em;
+        }
     }
 }
 
@@ -36,6 +51,33 @@ a.c-card {
 
     &:hover {
         text-decoration: underline;
+    }
+}
+
+.c-cards--our-values {
+    justify-content: center;
+    text-align: center;
+
+    .c-card {
+        box-shadow: none;
+    
+        .c-card__image {
+            max-width: 60%;
+            margin: 0 auto;
+        }
+
+        .c-card__heading {
+            color: $color-secondary;
+        }
+    }
+}
+
+.c-cards--blog {
+    .c-card {
+        .c-card__heading {
+            font-family: 'OpenSans-Light', sans-serif;
+            font-size: 1.3rem;
+        }
     }
 }
 
