--- a/source/scss/modules/components/_team-members.scss
+++ b/source/scss/modules/components/_team-members.scss
@@ -39,8 +39,26 @@
 }
 
 .c-team-member--practitioner,
-.c-team-member--trustee {
+.c-team-member--trustee,
+.c-team-member--author {
     width: 100%;
+}
+
+.c-team-member--author {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+
+    .c-team-member__image {
+        margin-right: 40px;
+    }
+
+    .c-team-member__text {
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 @media (min-width:600px) {
