--- a/source/scss/modules/templates/_content.scss
+++ b/source/scss/modules/templates/_content.scss
@@ -1,8 +1,33 @@
 // Content
-.t-left-content {
+.t-content {
+    display: block;
+    padding: 50px 0;
+}
+
+.t-content-left,
+.t-content-right {
+    width: 100%;
+}
+
+.t-content-max-width {
     max-width: 840px;
 }
 
-.t-right-content {
-    max-width: 600px;
+@media screen and (min-width:768px) {
+    .t-content {
+        display: flex;
+    }
+
+    .t-content-left,
+    .t-content-right {
+        width: 50%;
+    }
+    
+    .t-content-left {
+        padding-right: 30px;
+    }
+
+    .t-content-right {
+        padding-left: 30px;
+    }
 }
