article style updates

--- a/source/scss/modules/components/_team-members.scss
+++ b/source/scss/modules/components/_team-members.scss
@@ -47,7 +47,7 @@
 .c-team-member--author {
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
+    padding: 30px 0 60px;
 
     .c-team-member__image {
         margin-right: 40px;
