--- a/source/scss/utilities/_helpers.scss
+++ b/source/scss/utilities/_helpers.scss
@@ -38,6 +38,19 @@
     font-weight: bold;
 }
 
+// Colour
+.u-color-primary {
+    color: $color-primary;
+}
+
+.u-color-secondary {
+    color: $color-secondary;
+}
+
+.u-color-tertiary {
+    color: $color-tertiary;
+}
+
 // Alignment
 .u-align-center {
     text-align: center;
