--- a/source/scss/modules/components/_latest-articles.scss
+++ b/source/scss/modules/components/_latest-articles.scss
@@ -9,14 +9,10 @@
     box-shadow: 0 0 5px 0 rgba(163,163,163,.8);
     display: flex;
     margin: 0 0 20px 0;
-    min-height: 150px;
 }
 
 .c-latest-article__image {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-width: 150px;
+    display: none;
 }
 
 .c-latest-article__details {
@@ -35,11 +31,25 @@
     align-items: center;
     display: flex;
     font-size: 0.95rem;
-    margin: 0 40px 10px 0;
+    margin: 10px 0 0;
 
     svg {
         height: 1em;
         margin-right: 5px;
         width: 1em;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .c-latest-article {
+        min-height: 150px;
+    }
+
+    .c-latest-article__image {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: block;
+        min-width: 150px;
     }
 }
