--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -8,6 +8,7 @@
 
 // ATOMS
 @import "modules/atoms/buttons",
+        "modules/atoms/blockquote",
         "modules/atoms/icons",
         "modules/atoms/images",
         "modules/atoms/links",
